--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <ul class="navlinks">
                     <li><a href="#">Inicio</a></li>
                     <li><a href="/noticias/">Noticias</a></li>
-                    <li><a href="https://www.facebook.com/acordabrasil">Redes Sociais</a></li>
+                    <li><a href="https://www.instagram.com/acordabrasilof">Instagram</a></li>
                     <li><a href="#">Contato</a></li>
                 </ul>
             </div>
