Update pagina noticias e css

--- a/noticias/index.html
+++ b/noticias/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Acorda Brasil</title>
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="/noticias/style.css">
 </head>
 <body>
 
