--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Acorda Brasil</title>
   <link rel="stylesheet" href="./style.css">
-
+  <meta name="google-site-verification" content="2D81ilHdhkBU2KdG8UxfGzlQhYzTj0IAs_8pTUwO_SE" />
 </head>
 <body>
 <!-- partial:index.partial.html -->
