--- a/noticias/index.html
+++ b/noticias/index.html
@@ -36,6 +36,14 @@
         <h2 class="myH2">SEÇÃO DE NOTICIAS</h2>
     
         <ul>
+            <ul class="expandableItem"><p class="myP">Resumo da Reforma Tributária - Julho 2023</p></ul>
+            <div class="myList">
+                <p class="myP">
+                    <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@eupresley/video/7253921596212104453" data-video-id="7253921596212104453" style="max-width: 605px;min-width: 325px;" > <section> <a target="_blank" title="@eupresley" href="https://www.tiktok.com/@eupresley?refer=embed">@eupresley</a> <p>Trouxe um resumão sobre a Reforma Tributária pra vocês. Será que o governo vai tomar nossas propriedades e heranças? Vão comprar IPTU em dobro? Vai gerar desemprego? Vamos pagar mais impostos?? </p> <a target="_blank" title="♬ som original - Presley | Economia" href="https://www.tiktok.com/music/som-original-7253921705117125381?refer=embed">♬ som original - Presley | Economia</a> </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>
+                <br /></p>
+            </div>
+
+           
             <ul class="expandableItem"><p class="myP">#DesmonetizaSG</p></ul>
             <div class="myList">
                 <p class="myP">
